--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,11 +11,14 @@
     "test": "jest ./"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "antd": "^5.26.7",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
