--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,9 +2,9 @@ pre-commit:
   parallel: true
   commands:
     lint:
-      glob: '*.{ts,tsx}'
+      glob: '**/*.{ts,tsx}'
       run: yarn eslint {staged_files}
     prettier:
-      glob: '*.{ts,tsx,css}'
+      glob: '**/*.{ts,tsx,css}'
       run: yarn prettier -w {staged_files}
       stage_fixed: true
