--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "node": ">=15"
   },
   "devDependencies": {
+    "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
     "@evilmartians/lefthook": "^1.3.9",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.32.0",
     "lerna": "^5.4.3"
   }
 }
