--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.7.1"
   },
   "devDependencies": {
+    "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
@@ -28,6 +29,7 @@
     "@typescript-eslint/parser": "^5.35.1",
     "babel-jest": "^29.0.1",
     "eslint": "^8.23.0",
+    "eslint-plugin-filenames": "^1.3.2",
     "jest": "^28",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
