MID-16 add server-error page, add not-found page

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -23,7 +23,8 @@
       "@/features/*": ["src/features/*"],
       "@/widgets/*": ["src/widgets/*"],
       "@/pages/*": ["src/pages/*"],
-      "@/app/*": ["src/app/*"]
+      "@/app/*": ["src/app/*"],
+      "@/styles/*": ["src/styles/*"]
     }
   },
   "include": ["src"],
