--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "singleQuote": true,
-  "semi": false,
+  "semi": true,
   "arrowParens": "avoid",
   "bracketSameLine": true,
-  "width": 50
+  "printWidth": 80,
+  "trailingComma": "all"
 }
