--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "^2.32.0",
     "lerna": "^5.4.3"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "4.7.0",
+    "i": "^0.3.7",
+    "nodemon": "3.1.10",
+    "npm": "^10.9.3",
+    "react-i18next": "^15.6.1",
+    "vite": "6.3.5"
   }
 }
