--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,9 @@
     "antd": "^5.26.7",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
+    "i18n": "^0.15.1",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
