--- a/package.json
+++ b/package.json
@@ -25,12 +25,6 @@
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "^2.32.0",
     "lerna": "^5.4.3"
-  },
-  "dependencies": {
-    "@vitejs/plugin-react": "4.7.0",
-    "i": "^0.3.7",
-    "nodemon": "3.1.10",
-    "npm": "^10.9.3",
-    "vite": "6.3.5"
+    "react-hook-form": "^7.62.0"
   }
 }
