--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.26.7",
+    "axios": "^1.6.0",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "i18n": "^0.15.1",
@@ -21,6 +22,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1"
   },
@@ -41,7 +43,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.89.2",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.8.2",
+    "typescript": "^5.4.0",
     "vite": "^3.0.7"
   },
   "license": "MIT"
