--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@evilmartians/lefthook": "^1.3.9",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "^2.32.0",
-    "lerna": "^5.4.3"
+    "lerna": "^5.4.3",
     "react-hook-form": "^7.62.0"
   }
 }
