--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -37,12 +37,13 @@
     "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.23.0",
     "eslint-plugin-filenames": "^1.3.2",
-    "jest": "^28",
+    "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.0.1",
     "lefthook": "^1.3.9",
     "prettier": "^2.7.1",
     "sass": "^1.89.2",
     "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.0",
     "vite": "^3.0.7"
   },
